# retrieval-kit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  run.py
src/retrieval_kit/: .secret_key  __init__.py  attributes.csv  core.py
src/retrieval_kit/static/css/: overflow-y.custom.css
src/retrieval_kit/templates/: documentation-page.html  login-page.html
static/css/: Roboto_Condensed_400_700_display_swap.css
templates/: documentation-page.html
